--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li class="contact__mail-area">
             <a href="mailto:info@devstudio.com">
               <svg class="contact__svg-phone">
-                <use href="./images/icons.svg#icon-envelope"></use>
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -57,7 +57,7 @@
           <li class="contact__phone-area">
             <a href="tel:+48111111111">
               <svg class="contact__svg-mail">
-                <use href="./images/icons.svg#icon-smartphone"></use>
+                <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               +48 111 111 111</a
             >
@@ -399,7 +399,7 @@
 
         <div class="footer__newsletter-area">
           <p class="footer__newsletter-title">zapisz się do newslettera</p>
-          <div>
+          <div class="footer__newsletter-box">
             <form name="newsletter" autocomplete="on">
               <label for="newsletter-email"> </label>
               <input
@@ -409,12 +409,14 @@
                 placeholder="E-mail"
                 class="footer__email-input"
               />
-              <button class="newsletter-button" type="submit">
-                Zapisz się
-              </button>
-              <svg class="footer__icon-send">
-                <use href="./images/icons.svg#icon-send" />
-              </svg>
+              <div class="footer__newsletter-btn-area">
+                <button class="newsletter-button" type="submit">
+                  Zapisz się
+                </button>
+                <svg class="footer__icon-send">
+                  <use href="./images/icons.svg#icon-send" />
+                </svg>
+              </div>
             </form>
           </div>
         </div>
