index styling end

--- a/index.html
+++ b/index.html
@@ -79,52 +79,52 @@
         </div>
       </section>
 
-      <section class="loremSection">
-        <ul class="loremSection__list">
-          <li class="loremSection__area">
-            <div class="loremSection__cards">
-              <svg class="loremSection__images">
+      <section class="lorem-section">
+        <ul class="lorem-section__list">
+          <li class="lorem-section__area">
+            <div class="lorem-section__cards">
+              <svg class="lorem-section__images">
                 <use href="./images/icons.svg#icon-antenna1"></use>
               </svg>
             </div>
-            <h3 class="loremSection__title">LOREM IPSUM</h3>
-            <p class="loremSection__text">
+            <h3 class="lorem-section__title">LOREM IPSUM</h3>
+            <p class="lorem-section__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
-          <li class="loremSection__area">
-            <div class="loremSection__cards">
-              <svg class="loremSection__images">
+          <li class="lorem-section__area">
+            <div class="lorem-section__cards">
+              <svg class="lorem-section__images">
                 <use href="./images/icons.svg#icon-clock1"></use>
               </svg>
             </div>
-            <h3 class="loremSection__title">LOREM IPSUM</h3>
-            <p class="loremSection__text">
+            <h3 class="lorem-section__title">LOREM IPSUM</h3>
+            <p class="lorem-section__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
-          <li class="loremSection__area">
-            <div class="loremSection__cards">
-              <svg class="loremSection__images">
+          <li class="lorem-section__area">
+            <div class="lorem-section__cards">
+              <svg class="lorem-section__images">
                 <use href="./images/icons.svg#icon-diagram1"></use>
               </svg>
             </div>
-            <h3 class="loremSection__title">LOREM IPSUM</h3>
-            <p class="loremSection__text">
+            <h3 class="lorem-section__title">LOREM IPSUM</h3>
+            <p class="lorem-section__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
-          <li class="loremSection__area">
-            <div class="loremSection__cards">
-              <svg class="loremSection__images">
+          <li class="lorem-section__area">
+            <div class="lorem-section__cards">
+              <svg class="lorem-section__images">
                 <use href="./images/icons.svg#icon-astronaut1"></use>
               </svg>
             </div>
-            <h3 class="loremSection__title">LOREM IPSUM</h3>
-            <p class="loremSection__text">
+            <h3 class="lorem-section__title">LOREM IPSUM</h3>
+            <p class="lorem-section__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
