--- a/index.html
+++ b/index.html
@@ -48,22 +48,43 @@
         <ul class="contact">
           <li class="contact__mail-area">
             <a href="mailto:info@devstudio.com">
-              <svg class="contact__svg-phone">
-                <use href="./images/icons.svg#icon-smartphone"></use>
+              <svg class="contact__svg-mail">
+                <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="contact__phone-area">
             <a href="tel:+48111111111">
-              <svg class="contact__svg-mail">
-                <use href="./images/icons.svg#icon-envelope"></use>
+              <svg class="contact__svg-phone">
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +48 111 111 111</a
             >
           </li>
         </ul>
-        
+        <!-- mobile menu -->
+        <div class="mobile-container">
+          <button
+            class="mobile-menu-button js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                clip-rule="evenodd"
+              ></path>
+            </svg>
+          </button>
+        </div>
+        <!-- mobile menu -->
       </div>
     </header>
 
@@ -137,18 +158,27 @@
         <h2 class="what-we-do__title">Czym się zajmujemy</h2>
         <ul class="what-we-do__list">
           <li class="what-we-do__item">
-            <img src="images/box1.jpg" alt="Tablet oraz rece na klawiaturze" />
+            <img
+              src="images/box1.jpg"
+              srcset="images/box1@2.jpg 2x"
+              alt="Tablet oraz rece na klawiaturze"
+            />
             <p class="what-we-do__overtext">Aplikacje komputerowe</p>
           </li>
           <li class="what-we-do__item">
             <img
               src="images/box2.jpg"
+              srcset="images/box2@2.jpg 2x 2x"
               alt="Laptop i telefon trzymany w dloni"
             />
             <p class="what-we-do__overtext">Aplikacje mobilne</p>
           </li>
           <li class="what-we-do__item">
-            <img src="images/box3.jpg" alt="Paleta kolorow w tablecie" />
+            <img
+              src="images/box3.jpg"
+              srcset="images/box3@2.jpg 2x"
+              alt="Paleta kolorow w tablecie"
+            />
             <p class="what-we-do__overtext">Rozwiązania graficzne</p>
           </li>
         </ul>
@@ -162,6 +192,7 @@
               <figure class="teamcard__figure">
                 <img
                   src="images/teamcard1.jpg"
+                  srcset="images/teamcard1@2.jpg 2x"
                   alt="Mezczyzna z broda w okularach"
                   width="270"
                   height="260"
@@ -198,6 +229,7 @@
               <figure class="teamcard__figure">
                 <img
                   src="images/teamcard2.jpg"
+                  srcset="images/teamcard2@2.jpg 2x"
                   alt="Blondynka w okularach"
                   width="270"
                   height="260"
@@ -234,6 +266,7 @@
               <figure class="teamcard__figure">
                 <img
                   src="images/teamcard3.jpg"
+                  srcset="images/teamcard3@2.jpg 2x"
                   alt="Usmiechniety mezczyzna"
                   width="270"
                   height="260"
@@ -270,6 +303,7 @@
               <figure class="teamcard__figure">
                 <img
                   src="images/teamcard4.jpg"
+                  srcset="images/teamcard4@2.jpg 2x"
                   alt="Mezczyzna z broda w okularach"
                   width="270"
                   height="260"
@@ -514,6 +548,59 @@
         </form>
       </div>
     </div>
+
+    <!-- mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="mobile-menu-button js-close-menu">
+        <svg
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu">
+        <li><a href="./index.html" class="link">Agencja</a></li>
+        <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+        <li><a href="#" class="link">Kontakt</a></li>
+      </ul>
+      <ul class="mobile-menu__phone">
+        <li><a href="tel:+48111111111" class="link">+48 111 111 111</a></li>
+      </ul>
+      <ul class="mobile-menu__mail">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <ul class="mobile-menu__social-links">
+        <li>
+          <a href="#" class="link">Instagram</a
+          ><a href="#" class="link">Twitter</a
+          ><a href="#" class="link">Facebook</a
+          ><a href="#" class="link">LinkedIn</a>
+        </li>
+      </ul>
+    </div>
+
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile_menu.js"></script>
+    <!-- mobile-menu  -->
+    <!-- modal -->
     <script src="./js/modal.js"></script>
+    <!-- modal -->
   </body>
 </html>
