--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,28 @@
             >
           </li>
         </ul>
+        <!-- mobile menu -->
+        <div class="mobile-container">
+          <button
+            class="mobile-menu-button js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                clip-rule="evenodd"
+              ></path>
+            </svg>
+          </button>
+        </div>
+        <!-- mobile menu -->
       </div>
     </header>
 
@@ -95,6 +117,7 @@
                   class="projects-section__image"
                   class="projects-img"
                   src="images/project1.jpg"
+                  srcset="images/project1@2.jpg 2x"
                   alt="Ekran laptopa z trojgiem ludzi"
                 />
                 <div class="projects-section__overlay">
@@ -118,6 +141,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project2.jpg"
+                  srcset="images/project2@2.jpg 2x"
                   alt="Dwaj koszykarze podczas gry"
                 />
                 <div class="projects-section__overlay">
@@ -141,6 +165,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project3.jpg"
+                  srcset="images/project3@2.jpg 2x"
                   alt="Logo restauracji Seafood"
                 />
                 <div class="projects-section__overlay">
@@ -164,6 +189,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project4.jpg"
+                  srcset="images/project4@2.jpg 2x"
                   alt="Słuchawki"
                 />
                 <div class="projects-section__overlay">
@@ -185,6 +211,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project5.jpg"
+                  srcset="images/project5@2.jpg 2x"
                   alt="Dwa róźne pudełka obok siebie"
                 />
                 <div class="projects-section__overlay">
@@ -206,6 +233,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project6.jpg"
+                  srcset="images/project6@2.jpg 2x"
                   alt="Ekran komputera z obrazem świata"
                 />
                 <div class="projects-section__overlay">
@@ -231,6 +259,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project7.jpg"
+                  srcset="images/project7@2.jpg 2x"
                   alt="Otwarty miesiecznik Limited Edition"
                 />
                 <div class="projects-section__overlay">
@@ -254,6 +283,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project8.jpg"
+                  srcset="images/project8@2.jpg 2x"
                   alt="Zawieszka Project Lab"
                 />
                 <div class="projects-section__overlay">
@@ -275,6 +305,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project9.jpg"
+                  srcset="images/project9@2.jpg 2x"
                   alt="Ręce piszące na klawiaturze laptopa"
                 />
                 <div class="projects-section__overlay">
@@ -373,5 +404,108 @@
         </div>
       </div>
     </footer>
+    <!-- mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="mobile-menu-button js-close-menu">
+        <svg
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu">
+        <li><a href="./index.html" class="link">Agencja</a></li>
+        <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+        <li><a href="#" class="link">Kontakt</a></li>
+      </ul>
+      <ul class="mobile-menu__phone">
+        <li><a href="tel:+48111111111" class="link">+48 111 111 111</a></li>
+      </ul>
+      <ul class="mobile-menu__mail">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <ul class="mobile-menu__social-links">
+        <li>
+          <a href="#" class="link">Instagram</a
+          ><a href="#" class="link">Twitter</a
+          ><a href="#" class="link">Facebook</a
+          ><a href="#" class="link">LinkedIn</a>
+        </li>
+      </ul>
+    </div>
+
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile_menu.js"></script>
+    <!-- mobile-menu  -->
+    <!-- mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="mobile-menu-button js-close-menu">
+        <svg
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu">
+        <li><a href="./index.html" class="link">Agencja</a></li>
+        <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+        <li><a href="#" class="link">Kontakt</a></li>
+      </ul>
+      <ul class="mobile-menu__phone">
+        <li><a href="tel:+48111111111" class="link">+48 111 111 111</a></li>
+      </ul>
+      <ul class="mobile-menu__mail">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <ul class="mobile-menu__social-links">
+        <li>
+          <a href="#" class="link">Instagram</a
+          ><a href="#" class="link">Twitter</a
+          ><a href="#" class="link">Facebook</a
+          ><a href="#" class="link">LinkedIn</a>
+        </li>
+      </ul>
+    </div>
+
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile_menu.js"></script>
+    <!-- mobile-menu  -->
+    <!-- modal -->
+    <script src="./js/modal.js"></script>
+    <!-- modal -->
   </body>
 </html>
