--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <li class="what-we-do__item">
             <img
               src="images/box1.jpg"
-              srcset="images/box1@2.jpg 2x"
+              srcset="images/box1@2x.jpg 2x"
               alt="Tablet oraz rece na klawiaturze"
             />
             <p class="what-we-do__overtext">Aplikacje komputerowe</p>
@@ -168,7 +168,7 @@
           <li class="what-we-do__item">
             <img
               src="images/box2.jpg"
-              srcset="images/box2@2.jpg 2x 2x"
+              srcset="images/box2@2x.jpg 2x 2x"
               alt="Laptop i telefon trzymany w dloni"
             />
             <p class="what-we-do__overtext">Aplikacje mobilne</p>
@@ -176,7 +176,7 @@
           <li class="what-we-do__item">
             <img
               src="images/box3.jpg"
-              srcset="images/box3@2.jpg 2x"
+              srcset="images/box3@2x.jpg 2x"
               alt="Paleta kolorow w tablecie"
             />
             <p class="what-we-do__overtext">Rozwiązania graficzne</p>
@@ -192,7 +192,7 @@
               <figure class="teamcard__figure">
                 <img
                   src="images/teamcard1.jpg"
-                  srcset="images/teamcard1@2.jpg 2x"
+                  srcset="images/teamcard1@2x.jpg 2x"
                   alt="Mezczyzna z broda w okularach"
                   width="270"
                   height="260"
@@ -229,7 +229,7 @@
               <figure class="teamcard__figure">
                 <img
                   src="images/teamcard2.jpg"
-                  srcset="images/teamcard2@2.jpg 2x"
+                  srcset="images/teamcard2@2x.jpg 2x"
                   alt="Blondynka w okularach"
                   width="270"
                   height="260"
@@ -266,7 +266,7 @@
               <figure class="teamcard__figure">
                 <img
                   src="images/teamcard3.jpg"
-                  srcset="images/teamcard3@2.jpg 2x"
+                  srcset="images/teamcard3@2x.jpg 2x"
                   alt="Usmiechniety mezczyzna"
                   width="270"
                   height="260"
@@ -303,7 +303,7 @@
               <figure class="teamcard__figure">
                 <img
                   src="images/teamcard4.jpg"
-                  srcset="images/teamcard4@2.jpg 2x"
+                  srcset="images/teamcard4@2x.jpg 2x"
                   alt="Mezczyzna z broda w okularach"
                   width="270"
                   height="260"
