--- a/portfolio.html
+++ b/portfolio.html
@@ -117,7 +117,7 @@
                   class="projects-section__image"
                   class="projects-img"
                   src="images/project1.jpg"
-                  srcset="images/project1@2.jpg 2x"
+                  srcset="images/project1@2x.jpg 2x"
                   alt="Ekran laptopa z trojgiem ludzi"
                 />
                 <div class="projects-section__overlay">
@@ -141,7 +141,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project2.jpg"
-                  srcset="images/project2@2.jpg 2x"
+                  srcset="images/project2@2x.jpg 2x"
                   alt="Dwaj koszykarze podczas gry"
                 />
                 <div class="projects-section__overlay">
@@ -165,7 +165,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project3.jpg"
-                  srcset="images/project3@2.jpg 2x"
+                  srcset="images/project3@2x.jpg 2x"
                   alt="Logo restauracji Seafood"
                 />
                 <div class="projects-section__overlay">
@@ -189,7 +189,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project4.jpg"
-                  srcset="images/project4@2.jpg 2x"
+                  srcset="images/project4@2x.jpg 2x"
                   alt="Słuchawki"
                 />
                 <div class="projects-section__overlay">
@@ -211,7 +211,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project5.jpg"
-                  srcset="images/project5@2.jpg 2x"
+                  srcset="images/project5@2x.jpg 2x"
                   alt="Dwa róźne pudełka obok siebie"
                 />
                 <div class="projects-section__overlay">
@@ -233,7 +233,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project6.jpg"
-                  srcset="images/project6@2.jpg 2x"
+                  srcset="images/project6@2x.jpg 2x"
                   alt="Ekran komputera z obrazem świata"
                 />
                 <div class="projects-section__overlay">
@@ -259,7 +259,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project7.jpg"
-                  srcset="images/project7@2.jpg 2x"
+                  srcset="images/project7@2x.jpg 2x"
                   alt="Otwarty miesiecznik Limited Edition"
                 />
                 <div class="projects-section__overlay">
@@ -283,7 +283,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project8.jpg"
-                  srcset="images/project8@2.jpg 2x"
+                  srcset="images/project8@2x.jpg 2x"
                   alt="Zawieszka Project Lab"
                 />
                 <div class="projects-section__overlay">
@@ -305,7 +305,7 @@
                 <img
                   class="projects-section__image"
                   src="images/project9.jpg"
-                  srcset="images/project9@2.jpg 2x"
+                  srcset="images/project9@2x.jpg 2x"
                   alt="Ręce piszące na klawiaturze laptopa"
                 />
                 <div class="projects-section__overlay">
